@@ -1,5 +1,7 @@
 Revision history for Perl extension Parse::ExuberantCTags.
 
+  - Better Makefile.PL (Alexandr Ciornii)
+
 1.01  Tue Jun 30 16:25 2009
   - band-aid fix for perls older than 5.10 (include ppport.h in extra cc file)
 
